--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -7,16 +7,20 @@
 }
 
 .lead__info{
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  position: relative;
 }
 
 .lead__img{
-  max-width: 807px;
+  max-width: 700px;
   /* height: 1058; */
   position: absolute;
+  left: 0;
+  bottom: -54px;
+  z-index: -1;
 }
 
 .lead__headers{
@@ -55,4 +59,23 @@
   border: 1px solid #E5E7EB;
   background: rgba(255, 255, 255, 0.43);
   box-shadow: 0px 4px 4px 0px rgba(174, 174, 174, 0.25);
+  height: 54px;
+  display: flex;
+  bottom: -54px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.lead__contactsSubtitle{
+}
+
+.vk {
+  width: 35px;
+  margin-left: 9px;
+}
+
+.tg{
+  width: 35px;
+  margin-left: 9px;
 }
