--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,11 +1,18 @@
 .header{
+  background-color: #DCDCDC;
   box-sizing: border-box;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-bottom: 40px;
+  padding-top: 40px;
   max-width: 1240px;
   /* border: solid red; */
   display: flex;
   position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .header__mainContainer{
@@ -32,9 +39,15 @@
 }
 
 .header__item{
+  border-top: 2px solid #DCDCDC;
+  padding-top: 5px;
+}
+
+.header__item:hover{
   border-top: 2px solid #308E50;
   padding-top: 5px;
 }
+
 
 .header__link{
   text-decoration: none;
