--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -2,8 +2,7 @@
   width: 100%;
   /* border: 1px solid red; */
   box-sizing: border-box;
-  position: relative;
-  margin-top: 88px;
+  padding: 200px 25px 0px 25px;
 }
 
 .lead__info{
@@ -16,11 +15,16 @@
 
 .lead__img{
   max-width: 700px;
-  /* height: 1058; */
-  position: absolute;
-  left: 0;
-  bottom: -54px;
-  z-index: -1;
+  position: fixed;
+  left: 100px;
+  bottom: -20px;
+  z-index: -10;
+  opacity: 1;
+  transition: opacity 0.4s linear;
+}
+
+.lead:not(:hover) .lead__img {
+  opacity: 0.3; /* Adjust the opacity value as desired */
 }
 
 .lead__headers{
@@ -61,7 +65,7 @@
   box-shadow: 0px 4px 4px 0px rgba(174, 174, 174, 0.25);
   height: 54px;
   display: flex;
-  bottom: -54px;
+  bottom: -154px;
   align-items: center;
   justify-content: center;
   text-align: center;
