--- a/blocks/root.css
+++ b/blocks/root.css
@@ -1,9 +1,12 @@
 .root{
   background-color: #DCDCDC;
+  padding-top: 100px;
+  margin: 0 auto;
 }
 
 .root__section{
   max-width: 1240px;
   margin: 0 auto;
-  /* border: solid red; */
+  display: flex;
+  flex-direction: column;
 }
