--- a/index.css
+++ b/index.css
@@ -4,3 +4,7 @@
 @import url(./blocks/header.css);
 @import url(./blocks/page.css);
 @import url(./blocks/lead.css);
+@import url(./blocks/map.css);
+@import url(./blocks/footer.css);
+@import url(./blocks/forum.css);
+@import url(./blocks/stores.css);
