--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -14,7 +14,8 @@
 }
 
 .lead__img{
-  max-width: 700px;
+  /* height: 80vh; */
+  width: 80vh;
   position: fixed;
   left: 100px;
   bottom: -20px;
