--- a/blocks/stores.css
+++ b/blocks/stores.css
@@ -1,60 +1,69 @@
 .stores{
-  margin-top: 50px;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 36px;
+  gap: 30px;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .stores__main-container{
-  display: flex;
-  max-width: 1240px;
-  height: 240px;
-  padding-bottom: 0px;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
+  /* border: 1px solid red; */
   border-radius: 24px 24px 0px 0px;
   background: var(--background-default, #FFF);
-  padding: 10px 15px;
+  max-width: 1200px;
+  height: 280px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  padding: 20px;
+
 }
 
 .stores__title-logo{
-  /* border: solid red; */
-}
 
-.stores__info{
-  border: solid red;
-}
-
-.stores__title{
-  /* border: solid red; */
 }
 
 .stores__img{
-  /* border: solid red; */
+  margin-top: 50px;
 }
 
-.stores__description{
-  border: solid rgb(37, 14, 90);
+.stores__info{
+  /* border: 1px solid red; */
   display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  padding-top: 50px;
 }
 
-.stores__main-description{
-  /* border: solid red; */
+.stores__additional{
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 .stores__socials{
-  border: solid red;
-}
-
-.stores__notes{
-  border: solid red;
-}
-
-.stores__notes-main-text{
-  border: solid red;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px
 }
 
 .stores__rating{
-  border: solid red;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  gap: 10px
+}
+
+.stars{
+  width: 120px;
+  height: 20px;
+}
+
+.heart{
+  width: 36px;
+  height: 36px;
 }
